HEAD
	+ Installation does not fail if the restart of EventDaemon fails
	+ Now the ifaces_to_ignore variable is considered in ebox-netcfg-import
2.0.8
	+ PPPoE MTU rule is no longer flushed on module restart
2.0.7
	+ Show DHCP as default option in wizards if there is only one interface
	+ Avoid problems when removing interfaces (vlan, briges)
	+ Fixed support for bridged vlans configuration
	+ Set all interfaces as changed on backup restore
	+ PPPOE MTU is now changed when reconfiguring gateways
	+ Set default order for dashboard widgets
2.0.6
	+ WAN Failover now supports DHCP and PPPoE interfaces
	+ Disable reverse path to avoid failover checking problems
	+ Better default values for failover rules
	+ Use masks in fwmark to avoid interferences with traffic shaping
	+ Warning in log if failover event disabled due to unsaved changes
	+ Failover does not enable unwatched gateways
	+ Reload events daemon after upgrade to apply failover changes
2.0.5
	+ Include Zentyal in multigateway rules when setting 'any' as source
	+ Make Interfaces page title translatable
2.0.4
	+ Fixed failover problems in some scenarios
2.0.3
	+ Fixed syntax and string quote in 99proxy.conf
2.0.2
	+ Add support for authenticated proxy
	+ Fixed traffic shaping problems in multigateway scenarios
2.0.1
	+ Fixed network confirmation page to work with bridges
	+ Improved load balancing to avoid web sessions loss
2.0
	+ Fixed network wizard interface and logic
1.5.8
	+ Added options for internal ifaces in wizard configuration
	+ Bug fix: disabling global proxy configuration didn't work
1.5.7
	+ More global proxy configuration and domain configuration improvements.
	+ Zentyal rebrand
1.5.6
	+ Do not show unreplaced {link} variable in dashboard if not available
	+ Add support to define a system wide proxy
1.5.5
	+ New setup wizard
1.5.4
	+ Bridged mode support
1.5.3
	+ Fixed failover problems with undefined default gateway
1.5.2
	+ Traceroute works again in network diagnostic tools