@@ -7,4 +7,18 @@ local_address=$4
 remote_address=$5
 eth_iface=$6
 
+LOG=/var/log/ebox/pppoe.log
+
+TIMESTAMP=$(date +"%Y-%m-%d %T")
+echo "$TIMESTAMP> ppp-down script called with the following values:" >> $LOG
+echo "ppp_iface: $ppp_iface" >> $LOG
+echo "local_address: $local_address" >> $LOG
+echo "remote_address: $remote_address" >> $LOG
+echo "eth_iface: $eth_iface" >> $LOG
+echo "full_args: $@" >> $LOG
+echo >> $LOG
+
 $libexec/dhcp-clear.pl $eth_iface
+
+TIMESTAMP=$(date +"%Y-%m-%d %T")
+echo "$TIMESTAMP> ppp-down script ended" >> $LOG
