@@ -7,6 +7,17 @@ local_address=$4
 remote_address=$5
 eth_iface=$6
 
+LOG=/var/log/ebox/pppoe.log
+
+TIMESTAMP=$(date +"%Y-%m-%d %T")
+echo "$TIMESTAMP> ppp-up script called with the following values:" >> $LOG
+echo "ppp_iface: $ppp_iface" >> $LOG
+echo "local_address: $local_address" >> $LOG
+echo "remote_address: $remote_address" >> $LOG
+echo "eth_iface: $eth_iface" >> $LOG
+echo "full_args: $@" >> $LOG
+echo "dns: $USEPEERDNS $DNS1 $DNS2" >> $LOG
+
 $libexec/ppp-set-iface.pl $eth_iface $ppp_iface $local_address
 
 $libexec/dhcp-address.pl $eth_iface $local_address 255.255.255.255
@@ -19,3 +30,6 @@ fi
 # Regenerate firewall rules
 firewall_script=$libexec/dhcp-firewall.pl
 [ -x $firewall_script ] && $firewall_script
+
+TIMESTAMP=$(date +"%Y-%m-%d %T")
+echo "$TIMESTAMP> ppp-up script ended" >> $LOG
