@@ -1,4 +1,5 @@
 HEAD
+	+ Added PPPoE logging in /var/log/ebox/pppoe.log and ebox.log
 	+ Installation does not fail if the restart of EventDaemon fails
 	+ Now the ifaces_to_ignore variable is considered in ebox-netcfg-import
 2.0.8
